--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ol>
 
       <h2>Nutritional information</h2>
-      <p class="italic">Serving size: <data class="italic" value="100 g">100 g</data></p>
+      <p class="scale">Serving size: <data class="scale" value="100 g">100 g</data></p>
       <dl>
         <dt>Energy:</dt>
         <dd><data value="180">180 kJ</data></dd>
