Update title of Beets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Beetst</title>
+  <title>Beetroot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/PT+Sans?query=pt+sans">
